# haskell-exercises

./: Makefile  haskell-exercises.cabal
src/: Part1.hs
test/: DoctestPart1.hs  Spec.hs
test/Test/: Part1.hs
