cabal-version:      2.4
name:               haskell-exercises
version:            0.1.0.0

common common-options
  build-depends:       base ^>= 4.14

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

common common-doctest
  import:              common-options
  hs-source-dirs:      test
  build-depends:       doctest ^>= 0.20
  ghc-options:         -threaded

common common-exe
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:  Part1
    default-language: Haskell2010

test-suite exercises-test
  import:              common-options, common-exe
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules:       Test.Part1

  build-depends:       haskell-exercises
                     , hspec            ^>= 2.9
                     , hspec-hedgehog   ^>= 0.0
                     , hedgehog         ^>= 1.0
                     , hedgehog-classes ^>= 0.2
                     , silently         ^>= 1.2

test-suite doctest-part1
  import:              common-doctest
  type:                exitcode-stdio-1.0
  main-is:             DoctestPart1.hs